# medical-computerVision-hackathon

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml
backend/: README.md
backend/app/: config.py  llm_service.py  main.py  model_service.py  schemas.py
backend/app/routers/: inference.py
backend/models/: README.md
checkdevice.py/: checkdevice.py
frontend/: README.md  app.js  index.html  styles.css
notebooks/: 01.12_baseline_mobilenet_batch8_fullTTA.ipynb  01.13_baseline_mobilenet_fullft.ipynb  01.1_baseline_mobilenet_batch8.ipynb  01.2_baseline_kfold.ipynb  01_baseline_mobilenet.ipynb  01_baseline_mobilenet_batch16.ipynb  02_densenet121.ipynb  03_efficientnet_b0.ipynb  04.1_resnet.ipynb  04.2_resnet.ipynb  04.3_resnet.ipynb  04_resnet.ipynb  05.1_newBaseline_fullft_b3.ipynb  05.21_newBaseline.ipynb  05.2_newBaseline.ipynb  05.3_newBaseline_tta.ipynb  05.4_newBaseline.ipynb  05.5_newBaseline_sgd_momentum.ipynb  05.6_newBaseline_weighted_ensemble.ipynb  05.7.1_newBaseline_weighted_ensemble.ipynb  05.7_newBaseline_weighted_ensemble.ipynb  05.8_newBaseline_weighted_ensemble.ipynb  05_newBaseline.ipynb  06_oof_earlystop_weighted_ensemble.ipynb  07_resnet_mobilenet_ensemble.ipynb  08_resnet_densenet_adamw.ipynb  09.1_mobilenet_fullft.ipynb  09.2_resnet_fullft.ipynb  09.3_densenet_fullft.ipynb  09.4_efficientnet_fullft.ipynb  09.5_mobilenet_staged_fullunfreeze.ipynb  09.6_resnet_staged_fullunfreeze.ipynb  09.7_densenet_staged_fullunfreeze.ipynb  09.8_efficientnet_staged_fullunfreeze.ipynb  10_three_model_checkpoint_blend.ipynb  test.ipynb
